--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,27 @@
 			
 			<div id="slider">
 
+					<div class="row">
+            <div class="col-lg-2 col-md-6 text-center">
+
+                <div class="network">
+                    <ul id="navimg"><li>
+                        <%= image_tag 'FL.png', class: "navi", id: "arrowl" %></li>
+                    <li>
+                        <li>
+                        <%= image_tag 'img.png', class: "navi", id: "img1"  %></li>
+                    <li>
+                        <%= image_tag 'img.png', class: "navi", id: "img2"  %></li>
+                         <li>
+                        <%= image_tag 'img.png', class: "navi", id: "img3"  %></li>
+                         
+                        <li>
+                        <%= image_tag 'FR.png', class: "navi", id: "arrowr"  %></li>
+                    <li>
+                        
+                </ul>             
+                </div>
+          
           <ul class="slides">
               <li class="slide slide1"><img src="http://www.jdkebab.co.uk/LandingPage/gallery/00.jpg" /></li>
               <li class="slide slide2"><img src="https://irp-cdn.multiscreensite.com/779adb02/Wedding%20Dinner%20Menus%202.jpg" /></li>
